# skellybot-analysis

./: .gitignore  Dockerfile  __main__.py  add_subtitles_to_video.py  auto_subtitler_test_transcript.json  docker-compose.yml  main.py  main_ai_process.py  main_scrape_server.py  pyproject.toml
docs/: graph_data_chat_clusters.json  graph_data_full.json  graph_data_short_threads.json  index.html  script.js  styles.css  test_graph_data.json
docs/datasets/: HMN Fall24_graph_data.json  HMN_Fall24_2024-12-03T06-19-40_graph_data.json  graph_data.json  skb-test_2024-11-30T14-00-56_graph_data.json  skb-test_graph_data.json  test_graph_data.json
docs/react-exp/: react-exp-index.html  react-force-graph-readme.md
scripts/: add_embedding_xyz.py  augment_csvs.py  get_canvas_course_student_roster.py  load_csvs.py
skellybot_analysis/: __init__.py  __main__.py  run_server.py  server_scaper_main.py
skellybot_analysis/ai/: analyze_server_data.py  calculate_embeddings_and_projections.py  db_analyze_server_data.py  db_extract_user_profiles.py  openai_constants.py
skellybot_analysis/analysis_scripts/: add_embedding_xyz.py  augment_csvs.py  save_to_db_to_csv.py
skellybot_analysis/api/: routers.py
skellybot_analysis/data_models/: analysis_models.py  prompt_models.py  server_models.py  user_data_stats.py
skellybot_analysis/db/: db_analyze_server_data.py  db_save_to_markdown_directory.py  db_scrape_server.py  db_utilities.py  save_db_to_csv.py  validate_db.py
skellybot_analysis/models/: ai_analysis_db.py  analysis_models.py  base_sql_model.py  context_route.py  context_route_model.py  dataframe_handler.py  db_association_tables.py  db_join_tables.py  prompt_models.py  server_db_models.py  server_models.py  topic_db_model.py  user_data_stats.py  user_db_models.py  xyz_data_model.py
skellybot_analysis/scrape_server/: dataframe_augmenters.py  dataframe_handler.py  db_save_to_markdown_directory.py  discord_server_sql_mapper.py  mirror_discord_server_to_sql_db.py  run_server_scraper.py  save_to_markdown_directory.py  scrape_context_prompts.py  scrape_server.py  scrape_thread.py  scrape_utils.py  sql_db_connection_manager.py  validate_db.py
skellybot_analysis/skellybot_analysis_app/: app_lifespan.py  app_setup.py  create_app.py  skellybot_analysis_app_state.py
skellybot_analysis/system/: files_and_folder_names.py
skellybot_analysis/utilities/: extract_attachements_from_discord_message.py  generate_test_graph_data.py  get_most_recent_db_location.py  get_most_recent_scrape_data.py  get_most_recent_server_data.py  initialize_database.py  kill_process_on_port.py  load_env_variables.py  most_recent_scrape_location.txt
src/: configure_logging.py
webview/: index.html
webviewers/: force-directed-node-graph.html
(+197 files in other folders)
