[project]
name = "skellybot-analysis"
version = "0.1.0"
description = "The analysis backend for Skellybot (github.com/freemocap/skellybot)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    #    "chromadb>=0.5.20",
    #    "dash>=2.18.2",
    "discord>=2.3.2",
    "fastapi[standard]>=0.115.5",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.2.1",
    #    "ollama>=0.4.2",
    "openai>=1.52.2",
    #    "pandas>=2.2.3",
    #    "plotly>=5.24.1",
    "psutil>=6.1.1",
    "pydantic[email]>=2.9.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.0",
    "tiktoken>=0.8.0",
    "uvicorn>=0.32.1",
    "whisper>=1.1.10",
    #    "scikit-learn>=1.5.2",
    #    "sentence-transformers>=3.3.1",
    #    "tiktoken>=0.8.0",
    #    "tqdm>=4.66.6",
]
